--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@
 
 
 
-          <div id="todoslivros" style="display: flex;
-          justify-content: center;
-          margin-bottom: 100px;">
+          <div id="todoslivros" >
 aaaaaaaaaaaaaaa
 
           </div>
