--- a/login.html
+++ b/login.html
@@ -6,7 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-</head>
+  
+  </head>
 
 <body>
   <!-- Barra de navegação padrão -->
@@ -73,9 +74,44 @@
           </div>
           <div class="mb-3 form-check">
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            <label="form-check-label" >Você é Estudante?</label>
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          
+          <!--Formulário de SouEstudante-->
+          
+          <div id="SouEstudanteHIDE" style="display:none;">
+
+            <form>
+              <fieldset disabled>
+                <legend>Disabled fieldset example</legend>
+                <div class="mb-3">
+                  <label for="disabledTextInput" class="form-label">Qual seu grau escolar?</label>
+                  <input type="text" class="form-control" placeholder="Grau Escolar">
+                </div>
+                <div class="mb-3">
+                  <label for="disabledSelect" class="form-label"></label>
+                  <select id="disabledSelect" class="form-select">
+                    <option>Disabled select</option>
+                  </select>
+                </div>
+                <div class="mb-3">
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="disabledFieldsetCheck" disabled>
+                    <label class="form-check-label" for="disabledFieldsetCheck">
+                      Can't check this
+                    </label>
+                  </div>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </fieldset>
+            </form>
+
+
+          </div>
+
+
         </form>
+
 </body>
+<footer> <script src="EstudanteIF.js"></script> </footer>
 </html>
