--- a/login.html
+++ b/login.html
@@ -11,23 +11,28 @@
 
 <body>
   <!-- Barra de navegação padrão -->
+  <style>
+    .bd-placeholder-img {
+      font-size: 1.125rem;
+      text-anchor: middle;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      user-select: none;
+    }
 
-    <link href="navbar-top-fixed.css" rel="stylesheet">
-    <style>
-        .bd-placeholder-img {
-          font-size: 1.125rem;
-          text-anchor: middle;
-          -webkit-user-select: none;
-          -moz-user-select: none;
-          user-select: none;
-        }
+    @media (min-width: 768px) {
+      .bd-placeholder-img-lg {
+        font-size: 3.5rem;
+      }
+    }
+  </style>
+
   
-        @media (min-width: 768px) {
-          .bd-placeholder-img-lg {
-            font-size: 3.5rem;
-          }
-        }
-      </style>
+  <!-- Custom styles for this template -->
+  <link href="navbar-top-fixed.css" rel="stylesheet">
+</head>
+<body>
+  
     <nav class="navbar navbar-expand-lg navbar-light custom-bg" >
         <div class="container-fluid" >
           <a id="titulo" class="navbar-brand" href="index.html">
@@ -50,14 +55,16 @@
         <a class="nav-link active" aria-current="page" href="#">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="#">Login</a>
+        <a class="nav-link active" href="login.html">Login</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" href="CADASTRO.html">Cadastre-se</a>
       </li>
     </ul>
     <form class="d-flex">
       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
       <button class="container-main" class="border bg-light.bg-gradient rounded-1" type="submit" >Search</button>
     </form>
-
   </div>
 </div>
 </nav>
@@ -72,6 +79,7 @@
             <label for="exampleInputPassword1" class="form-label">Password</label>
             <input type="password" class="form-control" id="exampleInputPassword1">
           </div>
+          <button type="button" class="btn btn-primary">Submit</button>
         
           <!--Formulário de SouEstudante-->
           
