--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                   <li class="nav-item">
                     <a class="nav-link active" href="login.html">Login</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="CADASTRO.html">Cadastre-se</a>
+                  </li>
                 </ul>
                 <form class="d-flex">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
