MUITA COISA NUM DIA SÓ

--- a/CADASTRO.html
+++ b/CADASTRO.html
@@ -61,7 +61,7 @@
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="container-main" class="border bg-light.bg-gradient rounded-1" type="submit" >Search</button>
+          <button class="border bg-light.bg-gradient rounded-1" type="submit" >Search</button>
         </form>
       </div>
     </div>
@@ -102,12 +102,15 @@
 
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="FieldsetCheck">
-                <label class="form-check-label" for="FieldsetCheck">Marque para anexar arquivo</label>
+                <label class="form-check-label" for="FieldsetCheck">Deseja adicionar algum Livro à nossa coleção?</label><br>
+    
             </div>
 
             <div class="mb-3" id="campoAnexo" style="display:none;">
-                <label for="anexo" class="form-label">Anexar arquivo:</label>
-                <input type="file" class="form-control-file" id="anexo" name="anexo">
+                <label for="anexo" class="form-label">Anexar arquivo:</label><br>
+              
+                <input type="file" class="form-control-file" id="anexo" name="anexo"><br>
+                <label>OBS: Coloque apenas a Imagem da capa do livro*</label>
             </div>
         </div>
 
