--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
 
 <body>
@@ -63,11 +63,22 @@
     </ul>
     <form class="d-flex">
       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="container-main" class="border bg-light.bg-gradient rounded-1" type="submit" >Search</button>
+      <button class="border bg-light.bg-gradient rounded-1" type="submit" >Search</button>
+      <a href="#" onclick="toggleSidebar()"><span id="barras" class="material-icons">list</span></a>
     </form>
-  </div>
+</div>
 </div>
 </nav>
+
+<div class="sidebar custom-bg" id="sidebar">
+<ul>
+<h2 class="cor">Menu</h2>
+<li><a href="#" class="cor">Home</a></li>
+<li><a href="#" class="cor">Sobre</a></li>
+<li><a href="#" class="cor">Serviços</a></li>
+<li><a href="#" class="cor">Contato</a></li>
+</ul>
+</div>
         <!-- Formulário de Login -->
         <form class="formulario">
           <div class="mb-3">
