home fazer oq devia fazer

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="login.html">Login</a>
@@ -64,6 +64,7 @@
                     <button class="border bg-light.bg-gradient rounded-1" type="submit">Search</button>
                     <!-- Side Bar -->
                     <a href="#" onclick="toggleSidebar()"><span id="barras" class="material-icons">list</span></a>
+                    
                 </form>
             </div>
         </div>
@@ -107,12 +108,7 @@
     <script>
         var Alert = ReactBootstrap.Alert;
     </script>
+    <script src="EstudanteIF.js"></script>
 
-    <script>
-        function toggleSidebar() {
-            var sidebar = document.getElementById('sidebar');
-            sidebar.classList.toggle('show');
-        }
-    </script>
 </body>
 </html>
