--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light custom-bg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
-                <strong class="cor">Livraria<br> Sci-fi</strong>
+            <a class="cor1 semDecoNoText" id="titulo1" href="index.html">
+                <strong >Livraria<br> Sci-fi</strong>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -50,7 +50,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="login.html">Login</a>
