--- a/CADASTRO.html
+++ b/CADASTRO.html
@@ -34,17 +34,10 @@
       
         <nav class="navbar navbar-expand-lg navbar-light custom-bg" >
             <div class="container-fluid" >
-              <a id="titulo" class="navbar-brand" href="index.html">
-                <style>
-                    #titulo{
-                        color: aliceblue;
-                        font-size: 20px;
-                        margin: 0px 20px; 
-                        
-                    }
-                </style> 
-                <strong>Livraria<br> Sci-fi</strong>
-            </a>
+                <a  id="titulo1" class="cor1 semDecoNoText" href="index.html">
+
+                    <strong>Livraria<br> Sci-fi</strong>
+                </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
