--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 bottom: 0;
                 left: -250px; /* Esconde a barra lateral por padrão */
                 width: 250px;
-                background-color: #f8f9fa;
+                background-color: #651771;
                 padding: 20px;
                 transition: left 0.3s ease; /* Adiciona uma transição suave para a animação */
             }
@@ -48,15 +48,15 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                <ul class="navbar-nav me-auto mb-2 mb-md-0 ">
+                    <li class="nav-item nativesx">
+                        <a class="nav-link active nativesx" aria-current="page" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="login.html">Login</a>
+                    <li class="nav-item " >
+                        <a class="nav-link active " href="login.html">Login</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="CADASTRO.html">Cadastre-se</a>
+                    <li class="nav-item nativesx">
+                        <a class="nav-link active nativesx" href="CADASTRO.html">Cadastre-se</a>
                     </li>
                 </ul>
                 <form class="d-flex">
@@ -82,14 +82,40 @@
 
     <div id="linha"></div>
 
-    <div id="todoslivros"></div>
+    <div class="livros">
+        <a href="">
+            <!-- Imagem -->
+            <img src="Imagens dos Livros/Duna.jpeg" class="tamanhodivLivros espaço" alt="Descrição da Imagem">
+        </a>
+        <a href="" >
+            <img src="Imagens dos Livros/Messias de Duna.jpg.jpg" class="tamanhodivLivros espaço" >
 
+        </a>
+        <a href="">
+            <!-- Imagem -->
+            <img src="Imagens dos Livros/Duna.jpeg" class="tamanhodivLivros espaço" alt="Descrição da Imagem">
+        </a>
+        <a href="" >
+            <img src="Imagens dos Livros/Messias de Duna.jpg.jpg" class="tamanhodivLivros espaço" >
+
+        </a>
+        <a href="">
+            <!-- Imagem -->
+            <img src="Imagens dos Livros/Duna.jpeg" class="tamanhodivLivros espaço" alt="Descrição da Imagem">
+        </a>
+
+    </div>
+
+
+        <!--Selecão de páginas-->
     <nav aria-label="Page navigation example" id="navigation">
         <ul class="pagination">
             <li class="page-item">
                 <a class="page-link" href="#" aria-label="Previous">
                     <span aria-hidden="true">&laquo;</span>
                 </a>
+            
+                
             </li>
             <li class="page-item"><a class="page-link" href="#">1</a></li>
             <li class="page-item"><a class="page-link" href="#">2</a></li>
