--- a/login.html
+++ b/login.html
@@ -83,7 +83,7 @@
             <label for="exampleInputPassword1" class="form-label">Password</label>
             <input type="password" class="form-control" id="exampleInputPassword1">
           </div>
-          <button type="button" class="btn btn-primary">Submit</button>
+          <button type="button" class="btn btn-primary" style="background-color: #651771;">Submit</button>
         
           <!--Formulário de SouEstudante-->
           
