Troca de cor final do site

--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0 ">
-                    <li class="nav-item nativesx">
-                        <a class="nav-link active nativesx" aria-current="page" href="index.html">Home</a>
+                    <li class="nav-item ">
+                        <a class="nav-lin active " aria-current="page" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item " >
-                        <a class="nav-link active " href="login.html">Login</a>
+                    <li >
+                        <a class="nav-lin" href="login.html">Login</a>
                     </li>
-                    <li class="nav-item nativesx">
-                        <a class="nav-link active nativesx" href="CADASTRO.html">Cadastre-se</a>
+                    <li class="nav-item ">
+                        <a class="nav-lin active " href="CADASTRO.html">Cadastre-se</a>
                     </li>
                 </ul>
                 <form class="d-flex">
