--- a/CADASTRO.html
+++ b/CADASTRO.html
@@ -44,13 +44,13 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-lin active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="login.html">Login</a>
+            <a class="nav-lin active" href="login.html">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="CADASTRO.html">Cadastre-se</a>
+            <a class="nav-lin active" href="CADASTRO.html">Cadastre-se</a>
           </li>
         </ul>
         <form class="d-flex">
@@ -127,7 +127,7 @@
             </div>
         </div>
 
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="button" class="btn btn-primary" style="background-color: #651771;">Submit</button>
     </form>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
