--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <nav class="navbar navbar-expand-lg navbar-light custom-bg">
         <div class="container-fluid">
             <a class="cor1 semDecoNoText" id="titulo1" href="index.html">
-                <strong >Livraria<br> Sci-fi</strong>
+                <strong >Integra<br>Biblio </strong>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
