Troca de titulo

--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
         <div class="container-fluid" >
           <a  id="titulo1" class="cor1 semDecoNoText" href="index.html">
 
-            <strong>Livraria<br> Sci-fi</strong>
+            <strong>Integra<br> Biblio</strong>
         </a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
