Botão de revelar a senha, e 8 caracteres na senha

--- a/login.html
+++ b/login.html
@@ -88,6 +88,12 @@
             <div class="mb-3">
               <label for="exampleInputPassword1" class="form-label" >Password</label>
               <input type="password" class="form-control" id="senhaform">
+              
+              <div class="form-check">
+                <input class="form-check-input" name="" id="checkbox" type="checkbox"  aria-label="Text for screen reader" />
+                <p id="checkedbox"  style="font-size: 14px;">Revelar senha</p>
+              </div>
+              
               <div id="aviso" class="form-text"></div>
             </div>
 
@@ -101,6 +107,9 @@
           </form>
 
   </body>
-  <footer> <script src="EstudanteIF.js"></script>
-          </footer>
+    <footer> 
+          <script src="EstudanteIF.js"></script>
+          <script src="Cadastro.js"></script>
+          <script src="login.js"></script>
+    </footer>
   </html>
