--- a/CADASTRO.html
+++ b/CADASTRO.html
@@ -85,11 +85,11 @@
     <form class="formulario">
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" >
             <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
         <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Password</label>
+            <label for="exampleInputPassword1" class="form-label" id="senha1">Password</label>
             <input type="password" class="form-control" id="exampleInputPassword1">
         </div>
         <div class="mb-3 form-check">
@@ -128,28 +128,10 @@
             </div>
         </div>
 
-        <button type="button" class="btn btn-primary" style="background-color: #651771;">Submit</button>
+        <button type="button" class="btn btn-primary" style="background-color: #651771; " onclick="clicou2()">Submit</button>
     </form>
 
-    <script>
-        $(document).ready(function () {
-            $('#w').change(function () {
-                if ($(this).is(':checked')) {
-                    $('#SouEstudanteHIDE').slideDown(400);
-                } else {
-                    $('#SouEstudanteHIDE').slideUp();
-                }
-            });
-
-            $('#FieldsetCheck').change(function () {
-                if ($(this).is(':checked')) {
-                    $('#campoAnexo').slideDown();
-                } else {
-                    $('#campoAnexo').slideUp();
-                }
-            });
-        });
-    </script>
     <script src="EstudanteIF.js"></script>
+    <script src="Cadastro.js"></script>
 </body>
 </html>
