Organização das pastas

--- a/HTML e CSS/login.html
+++ b/HTML e CSS/login.html
@@ -97,7 +97,7 @@
               <div id="aviso" class="form-text"></div>
             </div>
 
-            <button id="submit1" onclick="clicou()" type="button" class="btn btn-primary" style="background-color: #651771;">Submit</button>
+            <button id="submit1" onclick="clicou()" type="button" class="btn btn-primary" style="background-color: #651771;" >Submit</button>
             
           
             <!--Formulário de SouEstudante-->
@@ -108,8 +108,8 @@
 
   </body>
     <footer> 
-          <script src="EstudanteIF.js"></script>
-          <script src="Cadastro.js"></script>
-          <script src="login.js"></script>
+          <script src="../JavaScript/EstudanteIF.js"></script>
+          <script src="../JavaScript/Cadastro.js"></script>
+          <script src="../JavaScript/login.js"></script>
     </footer>
   </html>
