--- a/HTML e CSS/CADASTRO.html
+++ b/HTML e CSS/CADASTRO.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OakBooks</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="Imagens dos Livros/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../HTML e CSS/style.css">
+    <link rel="icon" href="../Imagens dos Livros/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
@@ -131,7 +131,7 @@
         <button type="button" class="btn btn-primary" style="background-color: #651771; " onclick="clicou2()">Submit</button>
     </form>
 
-    <script src="EstudanteIF.js"></script>
-    <script src="Cadastro.js"></script>
+    <script src="../JavaScript/EstudanteIF.js"></script>
+    <script src="../JavaScript/Cadastro.js"></script>
 </body>
 </html>
