--- a/HTML e CSS/index.html
+++ b/HTML e CSS/index.html
@@ -215,7 +215,7 @@
         </ul>
     </nav> 
 
-    <script src="EstudanteIF.js"></script>
+    <script src="../JavaScript/EstudanteIF.js"></script>
 
 </body>
 </html>
