--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OakBooks</title>
-    <link rel="icon" href="Imagens dos Livros/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../sitedelivros/Imagens dos Livros/favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../sitedelivros/HTML e CSS/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -118,9 +118,7 @@
         }
     </style>
 
-    
-    <!-- Custom styles for this template -->
-    <link href="sidebars.css" rel="stylesheet">
+
 
 
 </head>
@@ -136,7 +134,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0 ">
                     <li class="nav-item ">
-                        <a class="nav-lin active " aria-current="page" href="./index.html">Home</a>
+                        <a class="nav-lin active " aria-current="page" href="../sitedelivros/">Home</a>
                     </li>
                     <li >
                         <a class="nav-lin" href="../sitedelivros/HTML e CSS/login.html">Login</a>
