--- a/index.html
+++ b/index.html
@@ -170,23 +170,23 @@
     <div class="livros">
         <a href="">
             <!-- Imagem -->
-            <img src="../Imagens dos Livros/Duna.jpeg" class="tamanhodivLivros espaço" alt="Descrição da Imagem">
+            <img src="../sitedelivros/Imagens dos Livros/Duna.jpeg" class="tamanhodivLivros espaço" alt="Descrição da Imagem">
         </a>
         <a href="" >
-            <img src="../Imagens dos Livros/Messias de Duna.jpg.jpg" class="tamanhodivLivros espaço" >
+            <img src="../sitedelivros/Imagens dos Livros/Messias de Duna.jpg.jpg" class="tamanhodivLivros espaço" >
 
         </a>
         <a href="">
             <!-- Imagem -->
-            <img src="../Imagens dos Livros/Duna.jpeg" class="tamanhodivLivros espaço" alt="Descrição da Imagem">
+            <img src="../sitedelivros/Imagens dos Livros/Duna.jpeg" class="tamanhodivLivros espaço" alt="Descrição da Imagem">
         </a>
         <a href="" >
-            <img src="../Imagens dos Livros/Messias de Duna.jpg.jpg" class="tamanhodivLivros espaço" >
+            <img src="../sitedelivros/Imagens dos Livros/Messias de Duna.jpg.jpg" class="tamanhodivLivros espaço" >
 
         </a>
         <a href="">
             <!-- Imagem -->
-            <img src="../Imagens dos Livros/Duna.jpeg" class="tamanhodivLivros espaço" alt="Descrição da Imagem">
+            <img src="../sitedelivros/Imagens dos Livros/Duna.jpeg" class="tamanhodivLivros espaço" alt="Descrição da Imagem">
         </a>
 
     </div>
@@ -213,7 +213,7 @@
         </ul>
     </nav> 
 
-    <script src="../JavaScript/EstudanteIF.js"></script>
+    <script src="../sitedelivros/JavaScript/EstudanteIF.js"></script>
 
 </body>
 </html>
