Botando o site pra funcionar

--- a/HTML e CSS/login.html
+++ b/HTML e CSS/login.html
@@ -37,7 +37,7 @@
     
       <nav class="navbar navbar-expand-lg navbar-light custom-bg" >
           <div class="container-fluid" >
-            <a  id="titulo1" class="cor1 semDecoNoText" href="index.html">
+            <a  id="titulo1" class="cor1 semDecoNoText" href="../index.html">
 
               <strong>Integra<br> Biblio</strong>
           </a>
@@ -47,7 +47,7 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
         <li class="nav-item">
-          <a class="nav-lin active" aria-current="page" href="index.html">Home</a>
+          <a class="nav-lin active" aria-current="page" href="../index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-lin active" href="login.html">Login</a>
@@ -58,7 +58,7 @@
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="border bg-light.bg-gradient rounded-1" type="submit" >Search</button>
+        <button class="border bg-light.bg-gradient rounded-1" type="submit" onclick="search()">Search</button>
         <a href="#" onclick="toggleSidebar()"><span id="barras" class="material-icons">list</span></a>
       </form>
   </div>
@@ -111,5 +111,6 @@
           <script src="../JavaScript/EstudanteIF.js"></script>
           <script src="../JavaScript/Cadastro.js"></script>
           <script src="../JavaScript/login.js"></script>
+          <script src="../JavaScript/pesquisa.js"></script>
     </footer>
   </html>
