--- a/HTML e CSS/CADASTRO.html
+++ b/HTML e CSS/CADASTRO.html
@@ -35,7 +35,7 @@
       
         <nav class="navbar navbar-expand-lg navbar-light custom-bg" >
             <div class="container-fluid" >
-                <a  id="titulo1" class="cor1 semDecoNoText" href="index.html">
+                <a  id="titulo1" class="cor1 semDecoNoText" href="../index.html">
 
                     <strong>Integra<br> Biblio </strong>
                 </a>
@@ -45,7 +45,7 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-lin active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-lin active" aria-current="page" href="../index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-lin active" href="login.html">Login</a>
@@ -55,8 +55,8 @@
           </li>
         </ul>
         <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="border bg-light.bg-gradient rounded-1" type="submit" >Search</button>
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" >
+          <button class="border bg-light.bg-gradient rounded-1" type="submit" onclick="search()">Search</button>
                     <!-- Side Bar -->
                     <a href="#" onclick="toggleSidebar()"><span id="barras" class="material-icons">list</span></a>
                     
@@ -133,5 +133,6 @@
 
     <script src="../JavaScript/EstudanteIF.js"></script>
     <script src="../JavaScript/Cadastro.js"></script>
+    <script src="../JavaScript/pesquisa.js"></script>
 </body>
 </html>
