--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>OakBooks</title>
     <link rel="icon" href="../sitedelivros/Imagens dos Livros/favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="../sitedelivros/HTML e CSS/style.css">
+    <link rel="stylesheet" href="./HTML e CSS/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -125,7 +125,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light custom-bg">
         <div class="container-fluid">
-            <a class="cor1 semDecoNoText" id="titulo1" href="index.html">
+            <a class="cor1 semDecoNoText" id="titulo1" href="./index.html">
                 <strong >Integra<br>Biblio </strong>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -134,18 +134,18 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0 ">
                     <li class="nav-item ">
-                        <a class="nav-lin active " aria-current="page" href="../sitedelivros/">Home</a>
+                        <a class="nav-lin active " aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li >
-                        <a class="nav-lin" href="../sitedelivros/HTML e CSS/login.html">Login</a>
+                        <a class="nav-lin" href="./HTML e CSS/login.html">Login</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-lin active " href="../sitedelivros/HTML e CSS/CADASTRO.html">Cadastre-se</a>
+                        <a class="nav-lin active " href="./HTML e CSS/CADASTRO.html">Cadastre-se</a>
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="border bg-light.bg-gradient rounded-1" type="submit">Search</button>
+                    <input id="searchbar" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="border bg-light.bg-gradient rounded-1" type="submit" onclick="search()">Search</button>
                     <!-- Side Bar -->
                     <a href="#" onclick="toggleSidebar()"><span id="barras" class="material-icons">list</span></a>
                     
@@ -214,6 +214,6 @@
     </nav> 
 
     <script src="../sitedelivros/JavaScript/EstudanteIF.js"></script>
-
+    <script src="../JavaScript/pesquisa.js"></script>
 </body>
 </html>
